--- a/templates/report/accounts-view-not-found.html.twig
+++ b/templates/report/accounts-view-not-found.html.twig
@@ -1,67 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'base.html.twig' %}
 
-    <title>Accounts</title>
+{% block title %}{{ 'accounts.not_found.title'|trans }} · {{ 'app.name'|trans }}{% endblock %}
 
-    <link rel="stylesheet" href="/templates/joli/css/theme-blue.css">
-
-  </head>
-  <body>
-    <div class="page-container" style="height: 100vh;">
-        <div class="page-sidebar page-sidebar-fixed scroll">
-            <ul class="x-navigation">
-                <li class="xn-logo">
-                    <a href="/">Top Tier</a>
-                    <a href="#" class="x-navigation-control"></a>
-                </li>
-                <li class="xn-title">
-                    Navigation
-                </li>
-                <li>
-                    <a href="/dashboard">
-                        <span class="fa fa-desktop"></span>
-                        <span class="xn-text">Dashboard</span>
-                    </a>
-                </li>
-                <li class="xn-openable active">
-                    <a href="#">
-                        <span class="fa fa-cogs"></span>
-                        <span class="xn-text">Accounts</span>
-                    </a>
-                    <ul>
-                        <li>
-                            <a href="/accounts-add">
-                                <span class="fa fa-bell-o"></span>
-                                <span class="xn-text">Add Account</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/accounts">
-                                <span class="fa fa-users"></span>
-                                <span class="xn-text">Accounts</span>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="xn-title">
-                    Profile
-                </li>
-                <li>
-                    <a href="/logout">
-                        <span class="glyphicon glyphicon-log-out"></span>
-                        <span class="xn-text">Logout</span>
-                    </a>
-                </li>
-            </ul>
+{% block body %}
+    <section class="section">
+        <div class="card">
+            <h1 class="page-title">{{ 'accounts.not_found.title'|trans }}</h1>
+            <p class="lead">{{ 'accounts.not_found.message'|trans }}</p>
+            <a class="button button--primary" href="{{ path('app_account_list') }}">{{ 'accounts.list.heading'|trans }}</a>
         </div>
-        <div class="page-content">
-            <div class="page-title">
-                <h2>Account Not Found</h2>
-            </div>
-        </div>
-    </div>
-</body>
-</html>
+    </section>
+{% endblock %}
